Version 0.7.2 | Fix on IE

--- a/style/style.css
+++ b/style/style.css
@@ -94,7 +94,7 @@ form
   font-weight: bold;
   text-transform: uppercase;
   font-size: 32px;
-  font-family: futura;
+  font-family: futura, 'Open sans';
   -webkit-margin-before: 0;
   -webkit-margin-after: 0;
 }
@@ -119,7 +119,7 @@ img.imgOnLoad
 nav.navbar
 {
   z-index: 2;
-  font-family: futura;
+  font-family: futura, 'Open sans';
   font-weight: bold;
   font-size: 26px;
   text-transform: uppercase;
@@ -313,7 +313,7 @@ aside#browserInfo div span
   color: white;
   font-weight: bold;
   font-size: 32px;
-  font-family: futura;
+  font-family: futura, 'Open sans';
   text-transform: uppercase;
   position: absolute;
   bottom: 0;
@@ -399,7 +399,7 @@ article h1
   text-transform: uppercase;
   font-size: 124px;
   color: rgb(121, 43, 101);
-  font-family: futura;
+  font-family: futura, 'Open sans';
 }
 
 article section
@@ -408,14 +408,6 @@ article section
   flex-direction: column;
   justify-content: space-around;
 }
-
-/*article section div
-{
-  text-transform: uppercase;
-  font-size: 64px;
-  color: rgb(30, 24, 43);
-  font-family: futura;
-}*/
 
 article.default
 {
@@ -562,7 +554,7 @@ div.title em
   font-style: normal;
   font-weight: bold;
   text-transform: uppercase;
-  font-family: futura;
+  font-family: futura, 'Open sans';
   font-size: 128px;
   color: white;
 }
@@ -624,7 +616,7 @@ article div div.infoBloc h1
   position: absolute;
   top: 0;
   left: 0;
-  font-family: futura;
+  font-family: futura, 'Open sans';
   font-weight: bold;
   font-size: 60px;
   text-transform: uppercase;
@@ -842,6 +834,11 @@ med-project-sidebar
 
 .fromLeft
 {
+  -webkit-transform: translateZ(0);
+  -moz-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  -o-transform: translateZ(0);
+  transform: translateZ(0);
   animation: fromLeft 1.5s;
 }
 
@@ -853,6 +850,11 @@ med-project-sidebar
 
 .fromRight
 {
+  -webkit-transform: translateZ(0);
+  -moz-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  -o-transform: translateZ(0);
+  transform: translateZ(0);
   animation: fromRight 1.5s;
 }
 
@@ -864,6 +866,11 @@ med-project-sidebar
 
 .fromTop
 {
+  -webkit-transform: translateZ(0);
+  -moz-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  -o-transform: translateZ(0);
+  transform: translateZ(0);
   animation: fromTop 1.5s;
 }
 
@@ -875,6 +882,11 @@ med-project-sidebar
 
 .fromBot
 {
+  -webkit-transform: translateZ(0);
+  -moz-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  -o-transform: translateZ(0);
+  transform: translateZ(0);
   animation: fromBot 1.5s;
 }
 
@@ -885,7 +897,11 @@ med-project-sidebar
 }
 
 .translateEffect
-{
+{  -webkit-transform: translateZ(0);
+  -moz-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  -o-transform: translateZ(0);
+  transform: translateZ(0);
   animation: translateEffect 5s;
 }
 
@@ -1064,7 +1080,7 @@ aside.UI
   position: relative;
   text-transform: uppercase;
   background-color: rgb(30, 24, 43);
-  font-family: futura;
+  font-family: futura, 'Open sans';
   color: white;
 }
 
@@ -1080,7 +1096,7 @@ aside.UI
   position: relative;
   text-transform: uppercase;
   background-color: rgb(0, 128, 128);
-  font-family: futura;
+  font-family: futura, 'Open sans';
   color: white;
   box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -1155,15 +1171,14 @@ div.bloc div.comments
   flex-direction: column;
   justify-content: center;
   z-index: 2;
-  font-family: futura;
+  font-family: futura, 'Open sans';
   font-weight: bold;
   font-size: 5vh;
   text-align: center;
   position: absolute;
   height: 100%;
   width: 100%;
-  opacity: 0.9;
-  background-color: rgb(0, 128, 128);
+  background-color: rgba(0, 128, 128, 0.9);
   visibility: hidden;
   top: -100%;
   transition: 0.5s;
@@ -1187,9 +1202,13 @@ div.bloc:hover div.comments
   position: absolute;
   height: 100%;
   width: 100%;
-  background-color: rgb(0, 128, 128);
   visibility: visible;
   top: 0;
+  -webkit-transform: translateZ(0);
+  -moz-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  -o-transform: translateZ(0);
+  transform: translateZ(0);
   transition: 0.5s;
 }
 
@@ -1225,7 +1244,7 @@ aside.projectName
   text-transform: uppercase;
   font-size: 60px;
   font-weight: bold;
-  font-family: futura;
+  font-family: futura, 'Open sans';
   background-color: rgb(30, 24, 43);
   max-height: 150px;
 }
@@ -1233,7 +1252,7 @@ aside.projectName
 aside.rangePercentageContainer
 {
   font-weight: bold;
-  font-family: futura;
+  font-family: futura, 'Open sans';
   background-color: rgb(30, 24, 43);
   max-height: 75px;
 }
@@ -1265,7 +1284,7 @@ aside.rangePercentageContainer div.rangePercentage
 
 aside.rangePercentageContainer div.rangePercentage.skill
 {
-  background-color: rgb(0, 128, 128);
+  background-color: rgb(255,218,185);
 }
 
 aside.rangePercentageContainer div.rangePercentage.love
@@ -1478,7 +1497,7 @@ article.blog div.bloc h3
 
 article.paper med-html-insert h4
 {
-  font-family: futura;
+  font-family: futura, 'Open sans';
   margin-left: 30px;
   margin-right: 30px;
   margin-bottom: 30px;
@@ -1486,7 +1505,7 @@ article.paper med-html-insert h4
 
 article.paper med-html-insert h3
 {
-  font-family: futura;
+  font-family: futura, 'Open sans';
   margin-top: 30px;
   margin-right: 30px;
   margin-left: 30px;
